ecmascript/parser/tests/test262-error-references/fail/c177366cb56cf1bc.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/c177366cb56cf1bc.js:1:3
  |
1 | a class;
  |   ^^^^^

